storage/innobase/include/log0log.h
@@ -2,7 +2,7 @@
 
 Copyright (c) 1995, 2016, Oracle and/or its affiliates. All rights reserved.
 Copyright (c) 2009, Google Inc.
-Copyright (c) 2017, MariaDB Corporation
+Copyright (c) 2017, MariaDB Corporation. All Rights Reserved.
 
 Portions of this file contain modifications contributed and copyrighted by
 Google, Inc. Those modifications are gratefully acknowledged and are described
@@ -669,16 +669,12 @@ struct log_t{
 					/*!< how far we have written the log
 					AND flushed to disk */
 	ulint		n_pending_flushes;/*!< number of currently
-					pending flushes; incrementing is
-					protected by the log mutex;
-					may be decremented between
-					resetting and setting flush_event */
+					pending flushes; protected by
+					log_sys_t::mutex */
 	os_event_t	flush_event;	/*!< this event is in the reset state
-					when a flush is running; a thread
-					should wait for this without
-					owning the log mutex, but NOTE that
-					to set this event, the
-					thread MUST own the log mutex! */
+					when a flush is running;
+					os_event_set() and os_event_reset()
+					are protected by log_sys_t::mutex */
 	ulint		n_log_ios;	/*!< number of log i/os initiated thus
 					far */
 	ulint		n_log_ios_old;	/*!< number of log i/o's at the
