storage/innobase/os/os0file.cc
@@ -2,7 +2,7 @@
 
 Copyright (c) 1995, 2016, Oracle and/or its affiliates. All Rights Reserved.
 Copyright (c) 2009, Percona Inc.
-Copyright (c) 2013, 2017, MariaDB Corporation.
+Copyright (c) 2013, 2017, MariaDB Corporation. All Rights Reserved.
 
 Portions of this file contain modifications contributed and copyrighted
 by Percona Inc.. Those modifications are
@@ -469,8 +469,6 @@ public:
 	must call os_aio_simulated_wake_handler_threads later to ensure the
 	threads are not left sleeping! */
 	static void simulated_put_read_threads_to_sleep();
-
-	
 #endif /* _WIN32 */
 
 	/** Create an instance using new(std::nothrow)
@@ -616,11 +614,13 @@ private:
 	ulint			m_n_segments;
 
 	/** The event which is set to the signaled state when
-	there is space in the aio outside the ibuf segment */
+	there is space in the aio outside the ibuf segment;
+	os_event_set() and os_event_reset() are protected by AIO::m_mutex */
 	os_event_t		m_not_full;
 
 	/** The event which is set to the signaled state when
-	there are no pending i/os in this array */
+	there are no pending i/os in this array;
+	os_event_set() and os_event_reset() are protected by AIO::m_mutex */
 	os_event_t		m_is_empty;
 
 	/** Number of reserved slots in the AIO array outside
@@ -680,7 +680,7 @@ static const int	OS_AIO_IO_SETUP_RETRY_ATTEMPTS = 5;
 #endif /* LINUX_NATIVE_AIO */
 
 /** Array of events used in simulated AIO */
-static os_event_t*	os_aio_segment_wait_events = NULL;
+static os_event_t*	os_aio_segment_wait_events;
 
 /** Number of asynchronous I/O segments.  Set by os_aio_init(). */
 static ulint		os_aio_n_segments = ULINT_UNDEFINED;
@@ -3393,16 +3393,6 @@ os_file_set_eof(
 	return(!ftruncate(fileno(file), ftell(file)));
 }
 
-/** This function can be called if one wants to post a batch of reads and
-prefers an i/o-handler thread to handle them all at once later. You must
-call os_aio_simulated_wake_handler_threads later to ensure the threads
-are not left sleeping! */
-void
-os_aio_simulated_put_read_threads_to_sleep()
-{
-	/* No op on non Windows */
-}
-
 #else /* !_WIN32 */
 
 #include <WinIoCtl.h>
@@ -5982,6 +5972,12 @@ AIO::start(
 
 	os_aio_validate();
 
+	os_last_printout = ut_time();
+
+	if (srv_use_native_aio) {
+		return(true);
+	}
+
 	os_aio_segment_wait_events = static_cast<os_event_t*>(
 		ut_zalloc_nokey(
 			n_segments * sizeof *os_aio_segment_wait_events));
@@ -5994,8 +5990,6 @@ AIO::start(
 	for (ulint i = 0; i < n_segments; ++i) {
 		os_aio_segment_wait_events[i] = os_event_create(0);
 	}
-
-	os_last_printout = ut_time();
 
 	return(true);
 }
@@ -6047,12 +6041,14 @@ os_aio_free()
 {
 	AIO::shutdown();
 
-	for (ulint i = 0; i < os_aio_n_segments; i++) {
-		os_event_destroy(os_aio_segment_wait_events[i]);
-	}
+	if (!srv_use_native_aio) {
+		for (ulint i = 0; i < os_aio_n_segments; i++) {
+			os_event_destroy(os_aio_segment_wait_events[i]);
+		}
 
-	ut_free(os_aio_segment_wait_events);
-	os_aio_segment_wait_events = 0;
+		ut_free(os_aio_segment_wait_events);
+		os_aio_segment_wait_events = 0;
+	}
 	os_aio_n_segments = 0;
 }
 
@@ -6066,20 +6062,15 @@ os_aio_wake_all_threads_at_shutdown()
 	AIO::wake_at_shutdown();
 
 #elif defined(LINUX_NATIVE_AIO)
-
 	/* When using native AIO interface the io helper threads
 	wait on io_getevents with a timeout value of 500ms. At
 	each wake up these threads check the server status.
 	No need to do anything to wake them up. */
+#endif /* !WIN_ASYNC_AIO */
 
 	if (srv_use_native_aio) {
 		return;
 	}
-
-#endif /* !WIN_ASYNC_AIO */
-
-	/* Fall through to simulated AIO handler wakeup if we are
-	not using native AIO. */
 
 	/* This loop wakes up all simulated ai/o threads */
 
@@ -7433,7 +7424,8 @@ os_aio_print(FILE*	file)
 			srv_io_thread_function[i]);
 
 #ifndef _WIN32
-		if (os_event_is_set(os_aio_segment_wait_events[i])) {
+		if (!srv_use_native_aio
+		    && os_event_is_set(os_aio_segment_wait_events[i])) {
 			fprintf(file, " ev set");
 		}
 #endif /* _WIN32 */
